--- a/package.json
+++ b/package.json
@@ -1,28 +1,15 @@
 {
-  "name": "vid-main",
-  "version": "0.1.0",
-  "private": true,
+  "name": "vide",
+  "version": "1.0.0",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start"
   },
   "dependencies": {
-    "lightningcss": "^1.30.1",
-    "next": "^15.3.3",
+    "@supabase/supabase-js": "^2.42.3",
+    "next": "^14.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
-  },
-  "devDependencies": {
-    "@eslint/eslintrc": "^3.0.0",
-    "@tailwindcss/postcss": "^4.0.0",
-    "@types/node": "^20.0.0",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "eslint": "^9.0.0",
-    "eslint-config-next": "15.3.3",
-    "tailwindcss": "^4.1.8",
-    "typescript": "^5.0.0"
   }
 }
