--- a/package.json
+++ b/package.json
@@ -1,29 +1,14 @@
 {
-  "name": "vide",
+  "name": "cryptosignalai",
   "version": "1.0.0",
-  "description": "Panel video dengan Supabase: upload video, tampilkan, dan hapus khusus admin.",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node api/index.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/fanky86/vide.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/fanky86/vide/issues"
-  },
-  "homepage": "https://github.com/fanky86/vide#readme",
   "dependencies": {
-    "@supabase/supabase-js": "^2.50.0",
-    "next": "^15.3.3",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "ccxt": "^4.1.80",
+    "telegraf": "^4.12.2",
+    "technicalindicators": "^3.1.0"
   }
 }
